fixed version position on mobile devices

--- a/src/Header/_Logo.less
+++ b/src/Header/_Logo.less
@@ -1,19 +1,15 @@
 .logo {
-
+    cursor: pointer;
+    display: flex;
+    font-size: 20px;
+    font-weight: 500;
     padding-left: 5px;
-
-    a {
-        cursor: pointer;
-        font-size: 20px;
-        font-weight: 500;
-    }
 
     .image {
         cursor: pointer;
         display: inline-block;
         height: 55px;
         width: 55px;
-        float:left;
         line-height: 55px;
     }
 
@@ -34,7 +30,7 @@
 }
 
 .light-header, .light-sider {
-    .logo a {
+    .logo {
         color: #000
     }
 
@@ -45,7 +41,7 @@
 }
 
 .dark-header, .dark-sider {
-    .logo a {
+    .logo {
         color: #fff
     }
 
